package routes

import (
	"context"
	"log"

	pb "todoing-backend/proto/gen/proto"
)

type ReportServiceServer struct {
	pb.UnimplementedReportServiceServer
}

// GetReports 实现获取报告列表
func (s *ReportServiceServer) GetReports(ctx context.Context, req *pb.GetReportsRequest) (*pb.GetReportsResponse, error) {
	log.Printf("gRPC: Getting reports")

	// 实际实现中，这里会处理获取报告列表逻辑
	reports := []*pb.Report{
		{
			Id:      "report-1",
			UserId:  "user-id",
			Type:    pb.ReportType_DAILY,
			Period:  "2023-01-01",
			Title:   "Sample Report 1",
			Content: "Sample report content",
			Statistics: &pb.ReportStatistics{
				TotalTasks:      10,
				CompletedTasks:  5,
				InProgressTasks: 3,
				OverdueTasks:    2,
				CompletionRate:  50,
			},
		},
	}

	return &pb.GetReportsResponse{
		Reports: reports,
		Message: "Reports retrieved successfully",
	}, nil
}

// GetReport 实现获取单个报告
func (s *ReportServiceServer) GetReport(ctx context.Context, req *pb.GetReportRequest) (*pb.GetReportResponse, error) {
	log.Printf("gRPC: Getting report with id: %s", req.Id)

	// 实际实现中，这里会处理获取单个报告逻辑
	report := &pb.Report{
		Id:      req.Id,
		UserId:  "user-id",
		Type:    pb.ReportType_DAILY,
		Period:  "2023-01-01",
		Title:   "Sample Report",
		Content: "Sample report content",
		Statistics: &pb.ReportStatistics{
			TotalTasks:      0,
			CompletedTasks:  0,
			InProgressTasks: 0,
			OverdueTasks:    0,
			CompletionRate:  0,
		},
	}

	return &pb.GetReportResponse{
		Report:  report,
		Message: "Report retrieved successfully",
	}, nil
}

// GenerateReport 实现生成报告
func (s *ReportServiceServer) GenerateReport(ctx context.Context, req *pb.GenerateReportRequest) (*pb.GenerateReportResponse, error) {
	log.Printf("gRPC: Generating report")

	// 实际实现中，这里会处理生成报告逻辑
	report := &pb.Report{
		Id:      "generated-report-id",
		UserId:  "user-id",
		Type:    req.Type,
		Period:  req.Period,
		Title:   "Generated Report",
		Content: "Generated report content",
		Statistics: &pb.ReportStatistics{
			TotalTasks:      0,
			CompletedTasks:  0,
			InProgressTasks: 0,
			OverdueTasks:    0,
			CompletionRate:  0,
		},
	}

	return &pb.GenerateReportResponse{
		Report:  report,
		Message: "Report generated successfully",
	}, nil
}

// PolishReport 实现润色报告
func (s *ReportServiceServer) PolishReport(ctx context.Context, req *pb.PolishReportRequest) (*pb.PolishReportResponse, error) {
	log.Printf("gRPC: Polishing report %s", req.ReportId)

	// 实际实现中，这里会处理润色报告逻辑
	report := &pb.Report{
		Id:              req.ReportId,
		UserId:          "user-id",
		Type:            pb.ReportType_DAILY,
		Period:          "2023-01-01",
		Title:           "Polished Report",
		Content:         "Original report content",
		PolishedContent: "Polished report content",
		Statistics: &pb.ReportStatistics{
			TotalTasks:      0,
			CompletedTasks:  0,
			InProgressTasks: 0,
			OverdueTasks:    0,
			CompletionRate:  0,
		},
	}

	return &pb.PolishReportResponse{
		Report:  report,
		Message: "Report polished successfully",
	}, nil
}

// ExportReport 实现导出报告
func (s *ReportServiceServer) ExportReport(ctx context.Context, req *pb.ExportReportRequest) (*pb.ExportReportResponse, error) {
	log.Printf("gRPC: Exporting report %s in %s format", req.Id, req.Format)

	// 实际实现中，这里会处理导出报告逻辑
	return &pb.ExportReportResponse{
		Content:  "Report content",
		Filename: "report.txt",
		Message:  "Report exported successfully",
	}, nil
}

// DeleteReport 实现删除报告
func (s *ReportServiceServer) DeleteReport(ctx context.Context, req *pb.DeleteReportRequest) (*pb.DeleteReportResponse, error) {
	log.Printf("gRPC: Deleting report %s", req.Id)

	// 实际实现中，这里会处理删除报告逻辑
	return &pb.DeleteReportResponse{
		Message: "Report deleted successfully",
	}, nil
}
